--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,32 @@ body {
   flex-direction: column;
   color: white;
   width: 400px;
+  padding: 10px;
+}
+
+.hero .left h1 {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+  margin-bottom: 0;
+  line-height: 3rem;
+}
+
+.hero .left p {
+  font-size: 18px;
+  color: #e5e7eb;
+}
+
+.hero .left button {
+  padding: 5px 20px;
+  font-size: 16px;
+  background-color: #3882f6;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  align-self: flex-start;
+  flex-shrink: 0;
+  padding: 5px 40px;
 }
 
 .hero-right {
@@ -96,13 +122,13 @@ body {
   align-items: center;
   flex-direction: column;
   background-color: #e5e7eb;
-  padding: 30px;
+  padding: 50px;
 }
 
 .testimonial .quote {
   margin: 0;
   padding: 0;
-  max-width: 500px;
+  max-width: 700px;
   font-size: 36px;
   color: #1f2937;
   font-style: italic;
@@ -112,11 +138,60 @@ body {
   margin: 0;
   padding: 0;
   text-align: right;
-  width: 500px;
+  width: 700px;
   font-weight: bold;
   max-width: 500px;
 }
 
 .footer {
-  background-color: green;
+  background-color: #1f2937;
+  color: white;
+  font-size: 28px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.action-content {
+  width: 60%;
+  height: 140px;
+  background-color: #3882f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  padding: 0 40px;
+  color: white;
+}
+
+.action-text {
+  margin-right: 20px;
+}
+.action-content h3 {
+  margin-bottom: 0;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.action-content p {
+  margin-top: 0;
+  font-size: 16px;
+}
+
+.action-content button {
+  flex-shrink: 0;
+  padding: 5px 20px;
+  font-size: 16px;
+  background-color: #3882f6;
+  border: 2px solid;
+  border-radius: 10px;
+  color: white;
 }
